Error: muchos renders

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -228,6 +228,7 @@ td{
   font-family: Consolas, monaco, monospace;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 ul{
   list-style-position: inside;
