--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -174,6 +174,7 @@
 .header {
   background-color: black;
   height: 20%;
+  min-height: 20%; /* Establece una altura mínima para el encabezado */
   width: 100%;
   z-index: -1;
 }
@@ -207,8 +208,10 @@
   background-size: cover;
 }
 .resto {
-  flex: 1;
+  height: 500px;
+  width: 100%;
   background-color: rgb(255, 255, 255);
+  overflow: auto;
 }
 table
 {
