--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -211,19 +211,42 @@
   align-self: flex-end;
   width: 30px;
   height: 30px;
-  margin-top: auto;
+  justify-content: end;
   margin-right: auto;
   background-image: url('../../public/menu.png');
   background-size: cover;
   cursor: pointer;
+  position: relative;
 }
 .desplegable{
-  margin-top: auto;
+  margin-top: 30px;
+  left: 0;
+  position: absolute;
+  border-radius: 10px;
+  margin-bottom: 0;
   margin-right: auto;
   align-self: flex-end;
-  background-color: #64b2e6;
-  height: 80%;
-  width: 130%;
+  background-color: #861010;
+  height: 20%;
+  width: 10%;
+  color: aliceblue;
+}
+.desplegable button {
+  margin-top: 10%;
+  font-family: 'trebuchet ms';
+  color: #420913;
+  font-size: 15px;
+  text-shadow: 0px 1px 0px #8C3131;
+  box-shadow: 1px 1px 1px #821717;
+  padding: 10px 25px;
+  border-radius: 10px;
+  border: 2px solid #A31F1F;
+  background: #EB6060;
+  background: linear-gradient(to top, #EB6060, #DE0000);
+  height: auto;
+  width: auto;
+  text-align: center;
+  margin-left: 11%;
 }
 .perfil {
   float: left;
@@ -410,4 +433,12 @@ width: 7%;
   align-items: center;
   position: absolute;
   
+}
+.li2{
+  font-family: Consolas, monaco, monospace;
+  display: flex;
+  margin-top: 3px;
+  align-items: center;
+  cursor: pointer;
+  align-self: flex-start;
 }
