--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -186,6 +186,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: rgb(180, 17, 17);
 }
 .contenedor {
   flex: 1;
@@ -260,10 +261,13 @@
   background-size: cover;
 }
 .resto {
-  height: 500px;
+  height: 520px;
   width: 100%;
-  background-color: rgb(255, 255, 255);
-  overflow: auto;
+}
+.resto table{
+  height: 500px;
+  display: flex;
+  flex-direction: column;
 }
 table
 {
@@ -399,14 +403,16 @@ width: 7%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .modal-content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.modal-content input {
-  height: 20px;
+.inputt {
+  width: 150px;
+  height: auto;
   margin-bottom: 10px;
   border: 3px solid rgb(255, 0, 0);
   background-color: rgb(0, 0, 0);
@@ -414,7 +420,7 @@ width: 7%;
   color: rgb(255, 255, 255);
   Font-family: Consolas, monaco, monospace;
 }
-.modal-content input::placeholder
+.inputt::placeholder
 {
   text-align: center;
   color: rgb(255, 255, 255);
@@ -441,4 +447,18 @@ width: 7%;
   align-items: center;
   cursor: pointer;
   align-self: flex-start;
+}
+.lista {
+  background-size: contain;
+  border-color: #160104;
+  margin-left: 0;
+  width: auto;
+  height: 25px;
+  min-width: 200px;
+  text-align: center;
+  font-family: Consolas, monaco, monospace;
+  color: white;
+}
+.resto table{
+  border-collapse: collapse;
 }
