--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -231,6 +231,18 @@
   height: 20%;
   width: 10%;
   color: aliceblue;
+  animation: desplegar 0.3s ease-in-out forwards;
+}
+.desplegable.visible {
+  height: 20%;
+}
+@keyframes desplegar {
+  from {
+    height: 0;
+  }
+  to {
+    height: 20%;
+  }
 }
 .desplegable button {
   margin-top: 10%;
@@ -248,6 +260,7 @@
   width: auto;
   text-align: center;
   margin-left: 11%;
+  cursor: pointer;
 }
 .perfil {
   float: left;
@@ -462,4 +475,49 @@ width: 7%;
 }
 .resto table{
   border-collapse: collapse;
+}
+.loading-screen{
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  position: fixed;
+  background-color: rgba(207, 128, 128, 0.842);
+  opacity: 0.9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.custom-loader {
+
+  width: 100px;
+  height: 100px;
+  display: grid;
+}
+.custom-loader::before,
+.custom-loader::after {    
+  content:"";
+  grid-area: 1/1;
+  --c: radial-gradient(farthest-side,#F40000 92%,#0000);
+  background: 
+    var(--c) 50%  0, 
+    var(--c) 50%  100%, 
+    var(--c) 100% 50%, 
+    var(--c) 0    50%;
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  animation: s2 1s infinite;
+}
+.custom-loader::before {
+margin:8px;
+filter:hue-rotate(45deg);
+background-size: 16px 16px;
+animation-timing-function: linear
+}
+
+@keyframes s2{ 
+100%{transform: rotate(.5turn)}
 }
