--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -186,7 +186,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: rgb(180, 17, 17);
+  background-color: rgb(51, 47, 47);
 }
 .contenedor {
   flex: 1;
@@ -472,6 +472,11 @@ width: 7%;
   text-align: center;
   font-family: Consolas, monaco, monospace;
   color: white;
+  cursor: pointer;
+  background-color: rgb(51, 47, 47);
+}
+.lista:hover{
+  background-color: rgb(107, 95, 95);
 }
 .resto table{
   border-collapse: collapse;
@@ -509,7 +514,7 @@ width: 7%;
     var(--c) 0    50%;
   background-size: 24px 24px;
   background-repeat: no-repeat;
-  animation: s2 1s infinite;
+  animation: s2 0.8s infinite;
 }
 .custom-loader::before {
 margin:8px;
