--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -424,6 +424,17 @@ width: 7%;
   flex-direction: column;
   align-items: center;
 }
+.modal-overlay .close-button {
+  background-size: cover;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  margin-top: -21%;
+  margin-left: 18%;
+  font-size: 20px;
+  cursor: pointer;
+  background-image:url(../../public/cerrar.png);
+}
 .inputt {
   width: 150px;
   height: auto;
