--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,5 @@
+.fondo {
 
-.fondo 
-{
-  
   position: fixed;
   top: 0;
   left: 0;
@@ -9,34 +7,33 @@
   height: 100%;
   background-image: url('../../public/fondo.jpg');
   background-size: cover;
-  filter: blur(8px); 
-  z-index: -1;  
+  filter: blur(8px);
+  z-index: -1;
 }
 
-.fondo2
-{
+.fondo2 {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; 
-  z-index: -1;  
-  background: linear-gradient(45deg,#64b2e6, #da7343);
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(45deg, #64b2e6, #da7343);
 }
-.fotoAdox
-{
+
+.fotoAdox {
   position: fixed;
   top: 0;
   left: 0;
   width: 440px;
   height: 320px;
   background-image: url('../../public/Adox.jpg');
-  background-size: contain; 
+  background-size: contain;
   background-repeat: no-repeat;
-  z-index: 1; 
+  z-index: 1;
 }
-.login
-{
+
+.login {
   z-index: 1;
   position: absolute;
   top: 50%;
@@ -46,15 +43,16 @@
   height: 460px;
   width: 350px;
   border-radius: 10px;
-  -webkit-box-shadow: -12px 13px 11px 4px rgba(0,0,0,0.75);
-  -moz-box-shadow: -12px 13px 11px 4px rgba(0,0,0,0.75);
-  box-shadow: -12px 13px 11px 4px rgba(0,0,0,0.75);
+  -webkit-box-shadow: -12px 13px 11px 4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -12px 13px 11px 4px rgba(0, 0, 0, 0.75);
+  box-shadow: -12px 13px 11px 4px rgba(0, 0, 0, 0.75);
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
 }
+
 .inputTextLogin {
   height: 30px;
   width: 100%;
@@ -71,16 +69,17 @@
   border-radius: 100px;
   color: white;
 }
-.inputTextLogin::placeholder
-{
+
+.inputTextLogin::placeholder {
   text-align: center;
   color: white;
   Font-family: Consolas, monaco, monospace;
 }
-.inputTextLogin:hover
-{
+
+.inputTextLogin:hover {
   background-position: 100% 0;
 }
+
 .inputTextRegister {
   height: 30px;
   width: 100%;
@@ -98,18 +97,18 @@
   color: white;
   font-size: 15px;
 }
-.inputTextRegister::placeholder
-{
+
+.inputTextRegister::placeholder {
   text-align: center;
   color: white;
   Font-family: Consolas, monaco, monospace;
 }
-.inputTextRegister:hover
-{
+
+.inputTextRegister:hover {
   background-position: 100% 0;
 }
-.divFoto
-{
+
+.divFoto {
   margin-bottom: 30px;
   margin-top: 20%;
   margin-right: auto;
@@ -119,16 +118,16 @@
   height: 20%;
   background-image: url('../../public/usuario.png');
   background-size: cover;
-  
-  
+
+
 }
-.sumbmit
-{
+
+.sumbmit {
   border: 3px solid black;
   border-radius: 100px;
   margin-top: 10%;
   margin-left: 10px;
-  background: linear-gradient(45deg,black, gray);
+  background: linear-gradient(45deg, black, gray);
   cursor: pointer;
   width: 90%;
   height: 35px;
@@ -136,12 +135,13 @@
   color: white;
   margin-bottom: 10%;
 }
-.Link
-{
+
+.Link {
   color: white;
   Font-family: Consolas, monaco, monospace;
   font-size: 15px;
 }
+
 .button-link {
   display: inline-block;
   border: 3px solid black;
@@ -158,6 +158,7 @@
   font-size: 100%;
   text-decoration: none;
 }
+
 .container {
   display: flex;
   flex-direction: column;
@@ -165,19 +166,21 @@
   justify-content: center;
   height: 100vh;
 }
-.inventario
-{
+
+.inventario {
   background-color: #64b2e6;
   width: 10px;
   height: 100%;
 }
+
 .header {
   background-color: black;
   height: 20%;
-  min-height: 20%; 
+  min-height: 20%;
   width: 100%;
   z-index: -1;
 }
+
 .fondo3 {
   position: fixed;
   top: 0;
@@ -188,10 +191,12 @@
   flex-direction: column;
   background-color: rgb(51, 47, 47);
 }
+
 .contenedor {
   flex: 1;
   display: flex;
 }
+
 .izquierda {
   background: linear-gradient(red, #ff4444);
   width: 15%;
@@ -199,7 +204,8 @@
   display: flex;
   flex-direction: column;
 }
-.medioizquierda{
+
+.medioizquierda {
   width: 50%;
   height: 50%;
   align-self: flex-end;
@@ -208,7 +214,8 @@
   margin-right: auto;
   flex-direction: column;
 }
-.btn{
+
+.btn {
   align-self: flex-end;
   width: 30px;
   height: 30px;
@@ -219,7 +226,8 @@
   cursor: pointer;
   position: relative;
 }
-.desplegable{
+
+.desplegable {
   margin-top: 30px;
   left: 0;
   position: absolute;
@@ -233,17 +241,21 @@
   color: aliceblue;
   animation: desplegar 0.3s ease-in-out forwards;
 }
+
 .desplegable.visible {
   height: 20%;
 }
+
 @keyframes desplegar {
   from {
     height: 0;
   }
+
   to {
     height: 20%;
   }
 }
+
 .desplegable button {
   margin-top: 10%;
   font-family: 'trebuchet ms';
@@ -262,6 +274,7 @@
   margin-left: 11%;
   cursor: pointer;
 }
+
 .perfil {
   float: left;
   border-radius: 30px;
@@ -273,54 +286,63 @@
   background-image: url('../../public/perfil.png');
   background-size: cover;
 }
+
 .resto {
   height: 500px;
   width: 100%;
 }
-.resto table{
+
+.resto table {
   height: 463px;
   display: flex;
   flex-direction: column;
 }
-table
-{
+
+table {
   margin-top: 1%;
   margin-left: 1%;
 }
-td{
+
+td {
   height: 10px;
   width: 100px;
   border: 3px solid black;
 }
-.h1{
+
+.h1 {
   font-family: Consolas, monaco, monospace;
   font-size: 120%;
   text-align: center;
 }
-.li{
+
+.li {
   font-family: Consolas, monaco, monospace;
   display: flex;
   align-items: center;
   cursor: pointer;
   align-self: flex-start;
 }
-ul{
+
+ul {
   list-style-position: inside;
-    list-style-type: disc;
+  list-style-type: disc;
 }
-li::before{
+
+li::before {
   content: '•';
   margin-right: 5px;
 }
-.contenedor2{
+
+.contenedor2 {
   margin-left: 5%;
   margin-top: 2.5%;
   background-size: cover;
   height: 45%;
   width: 60%;
-  float: left ;
+  float: left;
 }
- .botoncabe1{
+
+.botoncabe1 {
   float: left;
   padding: 0px;
   margin: 0px;
@@ -329,42 +351,48 @@ li::before{
   background-image: url(../../public/mas-removebg-preview.png);
   background-size: 40px;
   background-position: center;
-  background-repeat: no-repeat;  height: 100%;
-  width: 6.5%; 
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 6.5%;
   border-radius: 15px;
   aspect-ratio: 1;
- }
- .botoncabe1:hover{
+}
 
--webkit-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
--moz-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
-box-shadow: 0px 0px 30px 0px rgba(255,255,255,1);
-height: 100.5%;
-width: 7%;
- }
- .botoncabe2{
+.botoncabe1:hover {
+
+  -webkit-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 1);
+  height: 100.5%;
+  width: 7%;
+}
+
+.botoncabe2 {
   float: left;
   padding: 0px;
   margin: 0px;
   margin-left: 2.5%;
   background-color: #c4001a;
-  background-image:url(../../public/equis-removebg-preview.png);
+  background-image: url(../../public/equis-removebg-preview.png);
   background-size: 40px;
   background-position: center;
-  background-repeat: no-repeat;  height: 100%;
-  width: 6.5%; 
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 6.5%;
   border-radius: 15px;
   aspect-ratio: 1;
- }
- .botoncabe2:hover{
+}
 
-  -webkit-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
-  -moz-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
-  box-shadow: 0px 0px 30px 0px rgba(255,255,255,1);
+.botoncabe2:hover {
+
+  -webkit-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 1);
   height: 100.5%;
   width: 7%;
-   }
- .botoncabe3{
+}
+
+.botoncabe3 {
   float: left;
   padding: 0px;
   margin: 0px;
@@ -373,20 +401,24 @@ width: 7%;
   background-image: url(../../public/pincel-removebg-preview.png);
   background-size: 40px;
   background-position: center;
-  background-repeat: no-repeat;  height: 100%;
-  width: 6.5%; 
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 6.5%;
   border-radius: 15px;
   aspect-ratio: 1;
- } 
- .botoncabe3:hover{
+}
 
-  -webkit-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
-  -moz-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
-  box-shadow: 0px 0px 30px 0px rgba(255,255,255,1);
+.botoncabe3:hover {
+
+  -webkit-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 1);
   height: 100.5%;
   width: 7%;
-  }
- .botoncabe4{ float: left;
+}
+
+.botoncabe4 {
+  float: left;
   padding: 0px;
   margin: 0px;
   margin-left: 2.5%;
@@ -396,18 +428,20 @@ width: 7%;
   background-position: center;
   background-repeat: no-repeat;
   height: 100%;
-  width: 6.5%; 
+  width: 6.5%;
   border-radius: 15px;
   aspect-ratio: 1;
- }
- .botoncabe4:hover{
+}
 
-  -webkit-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
-  -moz-box-shadow: 0px 10px 30px 0px rgba(255,255,255,1);
-  box-shadow: 0px 0px 30px 0px rgba(255,255,255,1);
+.botoncabe4:hover {
+
+  -webkit-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0px 10px 30px 0px rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 1);
   height: 100.5%;
   width: 7%;
 }
+
 .modal-overlay {
   border: #000000 3px solid;
   border-radius: 30px;
@@ -419,11 +453,13 @@ width: 7%;
   align-items: center;
   flex-direction: column;
 }
+
 .modal-content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .modal-overlay .close-button {
   background-size: cover;
   height: 30px;
@@ -433,28 +469,31 @@ width: 7%;
   margin-left: 18%;
   font-size: 20px;
   cursor: pointer;
-  background-image:url(../../public/cerrar.png);
+  background-image: url(../../public/cerrar.png);
 }
+
 .inputt {
   width: 150px;
   height: auto;
   margin-bottom: 10px;
   border: 3px solid rgb(255, 0, 0);
   background-color: rgb(0, 0, 0);
-  border-radius: 100px; 
+  border-radius: 100px;
   color: rgb(255, 255, 255);
   Font-family: Consolas, monaco, monospace;
 }
-.inputt::placeholder
-{
+
+.inputt::placeholder {
   text-align: center;
   color: rgb(255, 255, 255);
   Font-family: Consolas, monaco, monospace;
   font-size: 15px;
 }
+
 .modal-content button {
   margin-top: 10px;
 }
+
 .contenedor3 {
   height: 100%;
   width: 100%;
@@ -463,9 +502,10 @@ width: 7%;
   justify-content: center;
   align-items: center;
   position: absolute;
-  
+
 }
-.li2{
+
+.li2 {
   font-family: Consolas, monaco, monospace;
   display: flex;
   margin-top: 3px;
@@ -473,6 +513,7 @@ width: 7%;
   cursor: pointer;
   align-self: flex-start;
 }
+
 .lista {
   background-size: contain;
   border-color: #160104;
@@ -486,13 +527,16 @@ width: 7%;
   cursor: pointer;
   background-color: rgb(51, 47, 47);
 }
-.lista:hover{
+
+.lista:hover {
   background-color: rgb(107, 95, 95);
 }
-.resto table{
+
+.resto table {
   border-collapse: collapse;
 }
-.loading-screen{
+
+.loading-screen {
   top: 0;
   left: 0;
   width: 100%;
@@ -513,31 +557,36 @@ width: 7%;
   height: 100px;
   display: grid;
 }
+
 .custom-loader::before,
-.custom-loader::after {    
-  content:"";
+.custom-loader::after {
+  content: "";
   grid-area: 1/1;
-  --c: radial-gradient(farthest-side,#F40000 92%,#0000);
-  background: 
-    var(--c) 50%  0, 
-    var(--c) 50%  100%, 
-    var(--c) 100% 50%, 
-    var(--c) 0    50%;
+  --c: radial-gradient(farthest-side, #F40000 92%, #0000);
+  background:
+    var(--c) 50% 0,
+    var(--c) 50% 100%,
+    var(--c) 100% 50%,
+    var(--c) 0 50%;
   background-size: 24px 24px;
   background-repeat: no-repeat;
   animation: s2 0.8s infinite;
 }
+
 .custom-loader::before {
-margin:8px;
-filter:hue-rotate(45deg);
-background-size: 16px 16px;
-animation-timing-function: linear
+  margin: 8px;
+  filter: hue-rotate(45deg);
+  background-size: 16px 16px;
+  animation-timing-function: linear
 }
 
-@keyframes s2{ 
-100%{transform: rotate(.5turn)}
+@keyframes s2 {
+  100% {
+    transform: rotate(.5turn)
+  }
 }
-option{
+
+option {
   height: 20%;
   width: 20%;
 }
