--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -462,11 +462,12 @@ li::before {
   border-radius: 30px;
   width: 22%;
   height: 50%;
-  background-color: white;
+  background: #6b171a;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  
 }
 
 .modal-content {
@@ -486,19 +487,41 @@ li::before {
   cursor: pointer;
   background-image: url(../../public/cerrar.png);
 }
+.modal-overlay .close-button {
+  background-size: cover;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  margin-top: -21%;
+  margin-left: 18%;
+  font-size: 20px;
+  cursor: pointer;
+  background-image: url(../../public/cerrar.png);
+}
+.modal-overlay .close-button:hover {
+  background-size: cover;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  margin-top: -21%;
+  margin-left: 18%;
+  font-size: 20px;
+  cursor: pointer;
+  background-image: url(../../public/cerrarhover.png);
+}
 .check{
   display:inline-block
 }
 .inputt {
   width: 150px;
   height: auto;
-  text-align: center;
   margin-bottom: 10px;
-  border: 3px solid rgb(255, 0, 0);
-  background-color: rgb(0, 0, 0);
+  border: 3px solid rgb(53, 3, 3);
+  background-color: rgb(20, 14, 14);
   border-radius: 100px;
   color: rgb(255, 255, 255);
   Font-family: Consolas, monaco, monospace;
+  text-align: center;
 }
 
 .inputt::placeholder {
@@ -506,7 +529,7 @@ li::before {
   color: rgb(255, 255, 255);
   Font-family: Consolas, monaco, monospace;
   font-size: 15px;
-}
+}w
 
 .modal-content button {
   margin-top: 10px;
@@ -604,6 +627,45 @@ li::before {
   }
 }
 
+option {
+  height: 20%;
+  width: 20%;
+}
+
+.escondido{
+  color:#ffff;
+  Font-family: Consolas, monaco, monospace;
+font-size: x-large;
+} 
+.escondido2{
+  margin-bottom: none;
+  color: #ffff;
+  font-family: Consolas, monaco, monospace;
+  font-size:large;
+}
+.selec{
+  background-color: #160104;
+  color: #ffff;
+  margin-bottom: 3%;
+  width: 150px;
+  height: auto;
+  text-align: center;
+}
+
+.botonto{
+  width: 150px;
+  height: auto;
+  margin-bottom: 10px;
+  border: 3px solid rgb(53, 3, 3);
+  background-color: rgb(158, 12, 12);
+  border-radius: 100px;
+  color: rgb(255, 255, 255);
+  Font-family: Consolas, monaco, monospace;
+  cursor: pointer;
+}
+.botonto:hover{
+  background-color: rgb(214, 17, 17);
+}
 option {
   height: 20%;
   width: 20%;
