--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -335,7 +335,7 @@ td {
 }
 
 .li:hover{
-  color: #383838;
+  color: #ffffff;
 }
 
 ul {
@@ -469,6 +469,31 @@ li::before {
   flex-direction: column;
   
 }
+.modal-overlay2 {
+  border: #000000 3px solid;
+  border-radius: 30px;
+  width: 22%;
+  height: 60%;
+  background: #6b171a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+.modal-overlay2 .close-button {
+  background-size: cover;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  margin-top: -26%;
+  margin-left: 18%;
+  cursor: pointer;
+  background-image: url(../../public/cerrar.png);
+}
+.modal-overlay2 .close-button:hover {
+  background-image: url(../../public/cerrarhover.png);
+}
 
 .modal-content {
   display: flex;
@@ -493,20 +518,11 @@ li::before {
   width: 30px;
   position: absolute;
   margin-top: -21%;
-  margin-left: 18%;
-  font-size: 20px;
+  margin-left: 18%; 
   cursor: pointer;
   background-image: url(../../public/cerrar.png);
 }
 .modal-overlay .close-button:hover {
-  background-size: cover;
-  height: 30px;
-  width: 30px;
-  position: absolute;
-  margin-top: -21%;
-  margin-left: 18%;
-  font-size: 20px;
-  cursor: pointer;
   background-image: url(../../public/cerrarhover.png);
 }
 .check{
@@ -523,7 +539,9 @@ li::before {
   Font-family: Consolas, monaco, monospace;
   text-align: center;
 }
-
+.inputt:hover{
+  background-color: rgb(63, 45, 45);
+}
 .inputt::placeholder {
   text-align: center;
   color: rgb(255, 255, 255);
@@ -647,11 +665,15 @@ font-size: x-large;
   background-color: #160104;
   color: #ffff;
   margin-bottom: 3%;
+  border-radius: 100px;
   width: 150px;
   height: auto;
   text-align: center;
+  appearance: none;
 }
-
+.selec:hover{
+  background-color: #2e0209;
+}
 .botonto{
   width: 150px;
   height: auto;
@@ -669,4 +691,10 @@ font-size: x-large;
 option {
   height: 20%;
   width: 20%;
+}
+.h3{
+  margin-top: 0;
+  margin-bottom: 0;
+  Font-family: Consolas, monaco, monospace;
+  color: black
 }
