--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,7 +83,7 @@
 
 .inputTextRegister {
   height: 30px;
-  width: 100%;
+  width: 200px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 10px;
@@ -130,7 +130,7 @@
   margin-left: 10px;
   background: linear-gradient(45deg, black, gray);
   cursor: pointer;
-  width: 90%;
+  width: 200px;
   height: 35px;
   Font-family: Consolas, monaco, monospace;
   color: white;
